     Based on code from Phil Karn, William Allen Simpson and Niels Provos.
     ok markus@, thanks jmc@
   - markus@cvs.openbsd.org 2003/07/29 18:24:00
     [LICENCE progressmeter.c]
     replace 4 clause BSD licensed progressmeter code with a replacement
     from Nils Nordman and myself; ok deraadt@
     (copied from OpenBSD an re-applied portable changes)

20030730
 - (djm) [auth-pam.c] Don't use crappy APIs like sprintf. Thanks bal

20030726
 - (dtucker) [openbsd-compat/xcrypt.c] Fix typo: DISABLED_SHADOW ->
   DISABLE_SHADOW.  Fixes HP-UX compile error.

20030724
 - (bal) [auth-passwd.c openbsd-compat/Makefile.in openbsd-compat/xcrypt.c 
    openbsd-compat/xcrypt.h] Split off encryption into xcrypt() interface,
    and isolate shadow password functions.  Tested in Solaris, but should
    not break other platforms too badly (except maybe HP =).  Also brings
    auth-passwd.c into full sync with OpenBSD tree.

20030723
 - (dtucker) [configure.ac] Back out change for bug #620.

20030719
 - (dtucker) [configure.ac] Bug #620: Define BROKEN_GETADDRINFO for
   Solaris/x86.  Patch from jrhett at isite.net.
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/07/14 12:36:37
     [sshd.c]
     remove undocumented -V option. would be only useful if openssh is used
     as ssh v1 server for ssh.com's ssh v2.
   - markus@cvs.openbsd.org 2003/07/16 10:34:53
     [ssh.c sshd.c]
     don't exit on multiple -v or -d; ok deraadt@
   - markus@cvs.openbsd.org 2003/07/16 10:36:28
     [sshtty.c]
     clear IUCLC in enter_raw_mode; from rob@pitman.co.za; ok deraadt@, fgs@
   - deraadt@cvs.openbsd.org 2003/07/18 01:54:25
     [scp.c]
     userid is unsigned, but well, force it anyways; andrushock@korovino.net
   - djm@cvs.openbsd.org 2003/07/19 00:45:53
     [sftp-int.c]
     fix sftp filename parsing for arguments with escaped quotes. bz #517;
     ok markus
   - djm@cvs.openbsd.org 2003/07/19 00:46:31
     [regress/sftp-cmds.sh]